[metadata]
name = textual_paint
version = 0.1.0
description = MS Paint in the terminal, built with Textual
long_description = file: README.md
long_description_content_type = text/markdown
author = Isaiah Odhner
author_email = isaiahodhner@gmail.com
license = MIT
url = https://github.com/1j01/textual-paint
keywords = tui, terminal, paint, drawing, art, graphics, text, textual, rich, ansi, ansi-art, mspaint

[options]
packages = find:
install_requires =
    textual
    rich
    stransi
    pyperclip

[options.extras_require]
dev =
    watchdog
    psutil
wallpaper =
    appscript
    pyxdg
    PyGObject

[options.entry_points]
console_scripts =
    textual-paint = textual_paint.paint:run
    txtpnt = textual_paint.paint:run
