[metadata]
name = textual_paint
version = 0.4.0
description = MS Paint in the terminal, built with Textual
long_description = file: README.md
long_description_content_type = text/markdown
author = Isaiah Odhner
author_email = isaiahodhner@gmail.com
license = MIT
license_file = LICENSE.txt
license_files = LICENSE.txt
url = https://github.com/1j01/textual-paint
project_urls =
    Source = https://github.com/1j01/textual-paint
    Changelog = https://github.com/1j01/textual-paint/blob/main/CHANGELOG.md
keywords = tui, terminal, paint, drawing, art, graphics, text, textual, rich, ansi, ansi-art, mspaint
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Artistic Software
    Topic :: Communications :: BBS
    Topic :: Communications :: Chat :: Internet Relay Chat
    Topic :: Multimedia :: Graphics :: Editors :: Raster-Based
    Topic :: Terminals
    Topic :: Text Editors
    Natural Language :: Arabic
    Natural Language :: Chinese (Simplified)
    Natural Language :: Chinese (Traditional)
    Natural Language :: Czech
    Natural Language :: Danish
    Natural Language :: Dutch
    Natural Language :: English
    Natural Language :: Finnish
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Greek
    Natural Language :: Hebrew
    Natural Language :: Hungarian
    Natural Language :: Italian
    Natural Language :: Japanese
    Natural Language :: Korean
    Natural Language :: Norwegian
    Natural Language :: Polish
    Natural Language :: Portuguese
    Natural Language :: Portuguese (Brazilian)
    Natural Language :: Russian
    Natural Language :: Slovak
    Natural Language :: Slovenian
    Natural Language :: Spanish
    Natural Language :: Swedish
    Natural Language :: Turkish

[options]
install_requires =
    textual==0.38.1
    rich==13.4.2
    stransi==0.3.0
    pyperclip==1.8.2
    pyfiglet==0.8.post1
    Pillow==9.5.0
[options.extras_require]
dev =
    watchdog==3.0.0
    psutil==5.9.0
    types-Pillow==10.0.0.1
    types-psutil==5.9.5.15
wallpaper =
    appscript==1.2.2
    pyobjc-framework-Quartz==9.2
    pyxdg==0.28
    PyGObject==3.42.1
[options.entry_points]
console_scripts =
    textual-paint = textual_paint.paint:main
[options.package_data]
textual_paint =
    localization/*/*.js
    fonts/**
    *.css
    *.ans
